# MoveIt2gather

./: .gitmodules  CLAUDE.md  README.md
docs/: guidebook.md  troubleshooting.md
src/open_manipulator/open_manipulator_description/ros2_control/: open_manipulator_x_position.ros2_control.xacro
src/open_manipulator/open_manipulator_teleop/open_manipulator_teleop/: open_manipulator_x_teleop.py
src/open_manipulator_x_pick_place/: package.xml  setup.cfg  setup.py
src/open_manipulator_x_pick_place/open_manipulator_x_pick_place/: calibrate_camera_to_base.py  pick_and_place.py  pick_and_place_aruco.py
src/ros2-aruco-pose-estimation/aruco_pose_estimation/: CMakeLists.txt
src/ros2-aruco-pose-estimation/aruco_pose_estimation/scripts/: generate_aruco_marker.py
vla/lerobot_robot_open_manipulator_x/: README.md  pyproject.toml
vla/lerobot_robot_open_manipulator_x/src/lerobot_robot_open_manipulator_x/: __init__.py  config.py  robot.py
