<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_x_pick_place</name>
  <version>0.0.1</version>
  <description>Fixed-pose pick-and-place script for OpenManipulator-X using moveit_py</description>
  <maintainer email="yhy030721@gmail.com">DGIST CSI Lab</maintainer>
  <license>Apache License 2.0</license>
  <depend>rclpy</depend>
  <depend>moveit_py</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>aruco_interfaces</depend>
  <depend>python3-scipy</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
